Fix for text alignment

--- a/dev/sass/_base/_text.scss
+++ b/dev/sass/_base/_text.scss
@@ -46,9 +46,13 @@ h1 {
 }
 
 h2 {
-	@include fontmath(1em, 60, 32, 12);
+	@include fontmath(1em, 40, 40, 10);
 
-	// white-space: nowrap;
+	padding-bottom: 0.15em;
+
+	text-indent: -0.04em;
+
+	white-space: nowrap;
 }
 
 h3 {
